src/scss/atoms/_typography.scss
$sans-default: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Oxygen-Sans', Ubuntu, Cantarell, 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
$sans-custom: 'Lato';

$serif: Georgia, Utopia, Palatino, 'Palatino Linotype', serif !default;
$serif-custom: 'Roboto Slab';

$code: Consolas, 'Courier New', Courier, monospace !default;

$font-smoothing: antialiased !default;

// Defines the default font family used for the body copy.
$body-copy-font-family-fallback: $sans-default !default;
$body-copy-font-family: prepend($sans-default, $sans-custom) !default;

// Defines the default font size of the body copy.
$body-copy-font-size-min: rem-calc(16) !default;
$body-copy-font-size-max: rem-calc(18) !default;

// Defines the default line height of the body copy.
$body-copy-line-height: 1.35 !default;

// Headings
$headings-font-color: $color-primary !default;
$headings-font-family-fallback: $serif !default;
$headings-font-family: prepend($serif, $serif-custom) !default;
$headings-font-weight: bold !default;
$headings-text-rendering: optimizeLegibility !default;

$h1-font-size: 1.9em !default;
$h2-font-size: 1.4em !default;
$h3-font-size: 1.2em !default;

$h1-max-mobile-font: rem-calc(24) !default;
$h2-max-mobile-font: rem-calc(21) !default;
$h3-max-mobile-font: rem-calc(18) !default;

// Anchors
$anchor-color-font: $color-primary !default;
$anchor-color-font-hover: $anchor-color-font !default;
$anchor-font-style: normal !default;
$anchor-text-decoration: none !default;
$anchor-text-decoration-hover: underline !default;

// basic font styles for body
body {
  // fluid typography
  @include fluid-type('font-size', 25em, 50em, $body-copy-font-size-min, $body-copy-font-size-max);
  color: $color-text;
  font-family: $body-copy-font-family-fallback;
  line-height: $body-copy-line-height;

  #{$fonts-loaded-class} & {
    @if $body-copy-font-family != $body-copy-font-family-fallback {
      font-family: $body-copy-font-family;
    }
  }
}

/**
 * @atom Base Paragraph Style
 * @section Typography > Base Styles
 * @markup
 *  <p>@{lipsum:2:paragraphs}</p>
 *  <p>@{lipsum:3:paragraphs}</p>
 */
p {
  margin-bottom: 1em;

  &:last-child {
    margin-bottom: 0;
  }
}

// Headings
/// This placeholder contains all base styles for the headings. Any heading we define from here on out can extend this placeholder.
%heading-base {
  color: $headings-font-color;
  font-family: $headings-font-family-fallback;
  font-weight: $headings-font-weight;
  text-rendering: $headings-text-rendering;

  #{$fonts-loaded-class} & {
    @if $headings-font-family != $headings-font-family-fallback {
      font-family: $headings-font-family;
    }
  }
}

/**
 * @atom Heading 1
 * @section Typography > Headings
 * @markup
 *  <h1>@{lipsum:2:words}</h1>
 *  <span class="h1">@{lipsum:5:words}</span>
 */
h1,
.h1 {
  @extend %heading-base;
  font-size: $h1-max-mobile-font;

  @include susy-media(font-desktop) {
    @if $h1-font-size != $h1-max-mobile-font {
      font-size: $h1-font-size;
    }
  }
}

/**
 * @atom Heading 2
 * @section Typography > Headings
 * @markup
 *  <h2>@{lipsum:2:words}</h2>
 *  <span class="h2">@{lipsum:5:words}</span>
 */
h2,
.h2 {
  @extend %heading-base;
  font-size: $h2-max-mobile-font;

  @include susy-media(font-desktop) {
    @if $h2-font-size != $h2-max-mobile-font {
      font-size: $h2-font-size;
    }
  }
}

h3,
.h3 {
  @extend %heading-base;
  font-size: $h3-max-mobile-font;

  @include susy-media(font-desktop) {
    @if $h3-font-size != $h3-max-mobile-font {
      font-size: $h3-font-size;
    }
  }
}

// anchors
/**
 * @atom Anchors
 * @section Typography > Base Styles
 * @markup
 *  <a href="#0">@{lipsum:2:words}</a>
 */
a {
  color: $anchor-color-font;
  font-style: $anchor-font-style;
  text-decoration: $anchor-text-decoration;

  &:hover,
  &:active,
  &:focus {
    @if $anchor-color-font-hover != $anchor-color-font {
      color: $anchor-color-font-hover;
    }

    @if $anchor-text-decoration-hover != $anchor-text-decoration {
      text-decoration: $anchor-text-decoration-hover;
    }
  }
}

